overflow fix

--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ html,
 body {
     width: 100%;
     height: 100%;
-    overflow: hidden;
 }
 
 #main {
@@ -24,7 +23,7 @@ body {
 #coverimg {
     position: absolute;
     top: 50%;
-    /* left: 50%; */
+    left: 0%;
     transform: translate(-50%, -50%);
 }
 
